# napari-nd2-spectral-ome-zarr

./: .gitignore  CHANGELOG.md  LICENSE  README.md  WORK_IN_PROGRESS.md  pyproject.toml
src/napari_nd2_spectral_ome_zarr/: __init__.py  _nd2.py  _ome_zarr.py  _ome_zarr_browser.py  _qt_utils.py  _reader.py  _roi_store.py  _spatial_ratio_analysis.py  _spectral.py  _spectral_analysis.py  _spectral_viewer.py  _widget.py  napari.yaml
src/napari_nd2_spectral_ome_zarr/resources/: CIE1931_CMF.csv
