[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "napari-nd2-spectral-ome-zarr"
version = "1.5.1"
description = "A napari plugin for Nikon ND2 spectral imaging workflows, including ND2-to-OME-Zarr conversion, OME-Zarr reading, spectral visualization, and ROI-based analysis across 400-740 nm."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  { name = "Wulin Teo" },
]
classifiers = [
  "Framework :: napari",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
keywords = [
  "napari",
  "spectral imaging",
  "nd2",
  "ome-zarr",
  "myelin",
  "nile red",
  "fluorescence spectroscopy"
]
dependencies = [
  "numpy",
  "nd2>=0.10",
  "dask[array]",
  "zarr<3",
  "numcodecs",
  "ome-zarr",
  "scikit-image",
  "qtpy",
  "matplotlib",
]

[project.urls]
Homepage = "https://github.com/wulinteousa2-hash/napari-nd2-spectral-ome-zarr"
Repository = "https://github.com/wulinteousa2-hash/napari-nd2-spectral-ome-zarr"

[project.entry-points."napari.manifest"]
napari-nd2-spectral-ome-zarr = "napari_nd2_spectral_ome_zarr:napari.yaml"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
napari_nd2_spectral_ome_zarr = ["napari.yaml", "resources/*.csv"]
